tenants/platform/backstage/base/configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  namespace: backstage
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - backstage.konstruct.teknologik8s.nl
    secretName: backstage-tls
  rules:
  - host: backstage.konstruct.teknologik8s.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backstage-controllers
            port:
              number: 7007
